grammar.js
    source_file: $ => seq(
      optional($.concerto_version),
      optional($.decorators),
      $.namespace_declaration,
      optional($.import_list),
      optional($.declaration_list),
    ),

    // ========================================================================
    // Concerto Version Statement
    // ========================================================================
    namespace_declaration: $ => seq(
      "namespace",
      $.namespace_path,
    ),

    // A namespace path like: org.accordproject.finance@1.0.0
    // We use a single token to avoid ambiguity with decorators' @
    namespace_path: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*(\.[a-zA-Z_$][a-zA-Z0-9_$]*)*(@[0-9]+\.[0-9x]+(\.[0-9x]+)?(-[a-zA-Z0-9._-]+)?(\+[a-zA-Z0-9._-]+)?)?/,

    // ========================================================================
    // Imports
    // ========================================================================
    declaration_list: $ => repeat1($._declaration),

    _declaration: $ => choice(
      $.concept_declaration,
      $.asset_declaration,
      $.participant_declaration,
      $.transaction_declaration,
      $.event_declaration,
      $.enum_declaration,
      $.scalar_declaration,
      $.map_declaration,
    ),

    // ========================================================================
    // Concept Declaration
    // ========================================================================
    concept_declaration: $ => seq(
      optional($.decorators),
      optional("abstract"),
      "concept",
      field("name", $.type_identifier),
      optional($._identifier_declaration),
      optional($.extends_clause),
      $.class_body,
    ),

    // ========================================================================
    // Asset Declaration
    // ========================================================================
    class_body: $ => seq(
      "{",
      repeat($._field_declaration),
      "}",
    ),

    _identifier_declaration: $ => choice(
      $.identified_by,
      $.identified,
    ),

    _field_declaration: $ => choice(
      $.string_field,
      $.boolean_field,
      $.datetime_field,
      $.integer_field,
      $.long_field,
      $.double_field,
      $.object_field,
      $.relationship_field,
    ),

    string_field: $ => seq(
      optional($.decorators),
      "o",
      "String",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.string_default),
      optional($.regex_validator),
      optional($.length_validator),
      optional("optional"),
    ),

    integer_field: $ => seq(
      optional($.decorators),
      "o",
      "Integer",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.integer_default),
      optional($.range_validator),
      optional("optional"),
    ),

    long_field: $ => seq(
      optional($.decorators),
      "o",
      "Long",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.integer_default),
      optional($.range_validator),
      optional("optional"),
    ),

    double_field: $ => seq(
      optional($.decorators),
      "o",
      "Double",
      optional($.array_indicator),
      field("name", $.identifier),
      optional($.real_default),
      optional($.range_validator),
      optional("optional"),
    ),

    regex_validator: $ => seq(
      "regex",
      "=",
      $.regex_literal,
    ),

    length_validator: $ => seq(
      "length",
      "=",
      "[",
      optional(field("min", $.signed_integer)),
      ",",
      optional(field("max", $.signed_integer)),
      "]",
    ),

    range_validator: $ => seq(
      "range",
      "=",
      "[",
      optional(field("lower", $.signed_real)),
      ",",
      optional(field("upper", $.signed_real)),
      "]",
    ),

    // ========================================================================
    // Decorators
    // ========================================================================
    type_identifier: $ => alias($._identifier_token, $.identifier),

    _identifier_token: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*/,

    identifier: $ => $._identifier_token,

    // ========================================================================
    // Literals
    // ========================================================================
    signed_integer: $ => /[+-]?[0-9]+/,

    signed_real: $ => /[+-]?[0-9]+(\.[0-9]*)?([eE][+-]?[0-9]+)?/,

    regex_literal: $ => /\/[^\/\n]+\/[gimsuy]*/,

    // ========================================================================
    // Comments
    // ========================================================================
